--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,10 @@
+networks:
+    kong-net:
+        external: true
+        name: kong-net
+ 
 services:
+ 
   keycloak:
     build: ./keycloak
     environment:
@@ -11,13 +17,39 @@ services:
     ports:
       - "27017:27017"
   profile:
+    container_name: profile
     build: ./brinder-profile-api
     ports:
       - 9080:8080
+    volumes:
+      - ./logs:/var/log/spring
     environment:
       spring_profiles_active: security,docker
+      LOGGING_LEVEL_ROOT: DEBUG
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "3"
     depends_on:
       - mongo
+  match:
+    container_name: match
+    build: ./brinder-match-api
+    ports:
+      - 9081:8080
+    volumes:
+      - ./logs:/var/log/spring
+    environment:
+      spring_profiles_active: security,docker
+      LOGGING_LEVEL_ROOT: DEBUG
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "3"
+    depends_on:
+      - mongo    
   swagger:
     image: swaggerapi/swagger-ui
     environment:
@@ -28,7 +60,33 @@ services:
       OAUTH_USE_PKCE: "true"  
       OAUTH_REALM: tindeer
       OAUTH_APP_NAME: swagger
-    ports: 
+    ports:
       - 8888:8080
     volumes:
       - ./swagger:/doc
+ 
+  kong:
+    container_name: kong
+    volumes:
+      - ./kong:/kong/declarative/
+    environment:
+      - KONG_DATABASE=off
+      - KONG_DECLARATIVE_CONFIG=/kong/declarative/kong.yaml
+      - KONG_PROXY_ACCESS_LOG=/dev/stdout
+      - KONG_ADMIN_ACCESS_LOG=/dev/stdout
+      - KONG_PROXY_ERROR_LOG=/dev/stderr
+      - KONG_ADMIN_ERROR_LOG=/dev/stderr
+      - KONG_LOG_LEVEL=info
+      - KONG_ADMIN_LISTEN=0.0.0.0:8001
+      - KONG_ADMIN_GUI_URL=http://localhost:8002
+      - KONG_LICENSE_DATA
+    ports:
+      - 8000:8000
+      - 8443:8443
+      - 8001:8001
+      - 8444:8444
+      - 8002:8002
+      - 8445:8445
+      - 8003:8003
+      - 8004:8004
+    image: kong
