--- a/brinder-common/Dockerfile
+++ b/brinder-common/Dockerfile
@@ -1,4 +1,5 @@
-FROM gradle:jdk17-alpine
+FROM gradle:7.4.2-jdk17
+# FROM gradle:jdk17-alpine doen't work on M1 Pro
 
 WORKDIR /home/source/java
 COPY . .
