--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,14 @@ services:
     image: mongo
     ports:
       - "27017:27017"
+  mongo-express:
+    image: mongo-express
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH_USERNAME: toto
+      ME_CONFIG_BASICAUTH_PASSWORD: toto
   profile:
     build: ./brinder-profile-api
     ports:
