--- a/brinder-match/lib/package.json
+++ b/brinder-match/lib/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongo": "^0.1.0"
   }
 }
