updated match api

--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -21,15 +21,30 @@ components:
             profile: access profile
             email: access email
   schemas:
+    GeoJsonPoint:
+      type: object
+      required:
+        - type
+        - coordinates
+      properties:
+        type:
+          type: string
+          enum: [Point]
+          description: The type of GeoJSON object, which is a Point in this case.
+        coordinates:
+          type: array
+          description: An array of two numbers (longitude, latitude) representing the position of the point.
+          items:
+            type: number
+            format: double
+          minItems: 2
+          maxItems: 2
+          example: [-73.856077, 40.848447]
     GeoCoordinates:
       type: object
       properties:
-        latitude:
-          type: number
-          format: double
-        longitude:
-          type: number
-          format: double
+        location:
+          $ref: '#/components/schemas/GeoJsonPoint'
     MatchedUser:
       type: object
       properties:
@@ -42,39 +57,39 @@ components:
         geoCoordinates:
           $ref: '#/components/schemas/GeoCoordinates'
     ProfileDto:
-  type: object
-  required:
-    - userId
-  properties:
-    id:
-      type: string
-      description: Unique identifier for the Profile
-    userId:
-      type: string
-      description: User identifier, must not be empty
-    mail:
-      type: string
-      format: email
-      description: Email address of the user
-    age:
-      type: integer
-      format: int32
-      minimum: 13
-      description: Age of the user, must be at least 13
-    firstName:
-      type: string
-      description: First name of the user
-    lastName:
-      type: string
-      description: Last name of the user
-    created:
-      type: string
-      format: 'date-time'
-      description: Date and time when the profile was created, in YYYY-MM-DD HH:mm:ss format
-    modified:
-      type: string
-      format: 'date-time'
-      description: Date and time when the profile was last modified, in YYYY-MM-DD HH:mm:ss format
+      type: object
+      required:
+        - userId
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the Profile
+        userId:
+          type: string
+          description: User identifier, must not be empty
+        mail:
+          type: string
+          format: email
+          description: Email address of the user
+        age:
+          type: integer
+          format: int32
+          minimum: 13
+          description: Age of the user, must be at least 13
+        firstName:
+          type: string
+          description: First name of the user
+        lastName:
+          type: string
+          description: Last name of the user
+        created:
+          type: string
+          format: date-time
+          description: Date and time when the profile was created, in YYYY-MM-DD HH:mm:ss format
+        modified:
+          type: string
+          format: date-time
+          description: Date and time when the profile was last modified, in YYYY-MM-DD HH:mm:ss format
 security:
   - oAuthSample:
       - profile
@@ -93,27 +108,52 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/MatchedUser'
-  /match/create:
+  /match/createorupdate:
     post:
-      summary: Crée un nouveau profil d'utilisateur avec géolocalisation
+      summary: Creates or updates a matched user profile with geolocation
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/GeoCoordinates'
+              $ref: '#/components/schemas/MatchedUser'
       responses:
         '201':
-          description: Profil d'utilisateur créé avec succès
+          description: Matched user profile successfully created or updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/MatchedUser'
         '400':
-          description: Données invalides fournies
+          description: Invalid data provided
+  /match/all:
+    get:
+      summary: Returns all user match profiles with pagination
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+          required: false
+          description: Page number of the user match profiles
+        - in: query
+          name: size
+          schema:
+            type: integer
+          required: false
+          description: Number of user match profiles per page
+      responses:
+        '200':
+          description: List of user match profiles
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MatchedUser'
   /match/{id}:
     get:
-      summary: Retourne le profil d'utilisateur spécifié par ID
+      summary: Returns the specified user match profile by ID
       parameters:
         - name: id
           in: path
@@ -122,47 +162,29 @@ paths:
             type: string
       responses:
         '200':
-          description: Profil d'utilisateur trouvé
+          description: User match profile found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/MatchedUser'
         '404':
-          description: Profil d'utilisateur non trouvé
-    put:
-      summary: Met à jour le profil d'utilisateur spécifié par ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GeoCoordinates'
-      responses:
-        '200':
-          description: Profil d'utilisateur mis à jour avec succès
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MatchedUser'
-        '400':
-          description: Données invalides fournies
-        '404':
-          description: Profil d'utilisateur non trouvé
+          description: User match profile not found
   /match/nearby:
     get:
-      summary: Retourne les profils d'utilisateurs à proximité
+      summary: Returns nearby user match profiles based on distance
+      parameters:
+        - name: distance
+          in: query
+          required: true
+          schema:
+            type: number
+            format: double
+            description: Distance in kilometers
       security:
-        - oAuthSample:
-            - profile
+        - bearerAuth: []
       responses:
         '200':
-          description: Liste des profils d'utilisateurs à proximité retournée avec succès
+          description: List of nearby user match profiles successfully returned
           content:
             application/json:
               schema:
