kong configuration with api key

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,10 +25,47 @@ services:
       DEEP_LINKING: "true"
       OAUTH2_REDIRECT_URL: http://localhost:8888/oauth2-redirect.html
       OAUTH_CLIENT_ID: swagger
-      OAUTH_USE_PKCE: "true"  
+      OAUTH_USE_PKCE: "true"
       OAUTH_REALM: tindeer
       OAUTH_APP_NAME: swagger
-    ports: 
+    ports:
       - 8888:8080
     volumes:
       - ./swagger:/doc
+  kong:
+    image: kong:latest
+    depends_on:
+      - kong-db
+    environment:
+      KONG_DATABASE: "postgres"
+      KONG_PG_HOST: "kong-db"
+      KONG_PG_USER: "kong"
+      KONG_PG_PASSWORD: "kong"
+      KONG_PROXY_ACCESS_LOG: "/dev/stdout"
+      KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
+      KONG_PROXY_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "8001:8001"
+      - "8444:8444"
+
+  kong-db:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: "kong"
+      POSTGRES_PASSWORD: "kong"
+      POSTGRES_DB: "kong"
+
+  kong-init:
+    image: kong:latest
+    depends_on:
+      - kong-db
+    command: kong migrations bootstrap
+    environment:
+      KONG_DATABASE: "postgres"
+      KONG_PG_HOST: "kong-db"
+      KONG_PG_USER: "kong"
+      KONG_PG_PASSWORD: "kong"
