--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -20,14 +20,40 @@ components:
           scopes:
             profile: access profile
             email: access email
-security: 
-  - oAuthSample: 
+  schemas:
+    ProfileDto:
+      type: object
+      properties:
+        id:
+          type: string
+        userId:
+          type: string
+        mail:
+          type: string
+          format: email
+        age:
+          type: integer
+          minimum: 13
+        firstName:
+          type: string
+        lastName:
+          type: string
+        created:
+          type: string
+          format: date-time
+        modified:
+          type: string
+          format: date-time
+      required:
+        - userId
+security:
+  - oAuthSample:
     - profile
     - email
 paths:
   /profiles/current:
     get:
-      summary: Retourne le profile courant de l'utilisateur
+      summary: Get current user data
       responses:
         '200':    # status code
           description: A JSON array of user names
@@ -40,19 +66,83 @@ paths:
                     type: string
   /profiles:
     get:
-      summary: Get profile by email
-      description: Search for profile using an email address and returns a paginated result.
+      summary: Search profiles by mail
+      operationId: searchByMail
       parameters:
+        - name: mail
+          in: query
+          description: Email address
+          schema:
+            type: string
         - name: page
           in: query
-          description: Page number of the results.
-          required: false
+          description: Page number
           schema:
             type: integer
-            format: int32
-            default:  0
+        - name: size
+          in: query
+          description: Page size
+          schema:
+            type: integer
+            default: 20
+            maximum: 200
       responses:
         '200':
           description: OK
-        '401':
-          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileDto'
+    post:
+      summary: Create a new profile
+      operationId: createProfile
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProfileDto'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileDto'
+  /profiles/{id}:
+    get:
+      summary: Get a profile by ID
+      operationId: getProfile
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileDto'
+    put:
+      summary: Update a profile by ID
+      operationId: updateProfile
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProfileDto'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileDto'
