--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,14 @@ services:
       spring_profiles_active: security,docker
     depends_on:
       - mongo
+  match:
+    build: ./brinder-match-api
+    ports:
+      - 9081:8080
+    environment:
+      spring_profiles_active: security,docker
+    depends_on:
+      - mongo
   swagger:
     image: swaggerapi/swagger-ui
     environment:
