Project Nada Sraigain and Alexis Chanyabanchachai

--- a/brinder-common/Dockerfile
+++ b/brinder-common/Dockerfile
@@ -1,7 +1,5 @@
-FROM gradle:jdk17-alpine
-
+FROM gradle:7.4.2-jdk17
 WORKDIR /home/source/java
 COPY . .
 RUN gradle publishToMavenLocal --no-daemon
 RUN ls -la ~/.gradle/caches
-
