[brinder-match-api] deps fix

--- a/brinder-match-api/build.gradle
+++ b/brinder-match-api/build.gradle
@@ -31,19 +31,15 @@ bootJar {
 }
 
 dependencies {
-	implementation 		'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 		'org.springframework.boot:spring-boot-starter-validation'
-	implementation 		'org.springframework.boot:spring-boot-starter-web'
-	implementation 		'org.springframework.boot:spring-boot-starter-security'
-	implementation 		'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-	implementation		'org.gso.brinder:brinder-common:1.0.0-SNAPSHOT'
-	implementation 		'com.github.rutledgepaulv:q-builders:1.6'
-	implementation 		'com.github.rutledgepaulv:rest-query-engine:0.7.1'
-	compileOnly 		'org.projectlombok:lombok'
-	developmentOnly 	'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.json:json:20210307'
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 	'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
