--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,45 +1,90 @@
-  version: "3"
-  services:
-    keycloak:
-      build: ./keycloak
-      environment:
-        KEYCLOAK_ADMIN: keycloak
-        KEYCLOAK_ADMIN_PASSWORD: keycloak
+version: "3"
+services:
+  keycloak:
+    container_name: keycloak
+    build: ./keycloak
+    environment:
+      KEYCLOAK_ADMIN: keycloak
+      KEYCLOAK_ADMIN_PASSWORD: keycloak
+    ports:
+      - 8080:8080
+    networks:
+      - kong-net
+  mongo:
+    container_name: mongo
+    image: mongo
+    ports:
+      - "27017:27017"
+    networks:
+      - kong-net
+  profile:
+    container_name: brinder-profile-api
+    build: ./brinder-profile-api
+    ports:
+      - 9080:8080
+    environment:
+      spring_profiles_active: security,docker
+    depends_on:
+      - mongo
+    networks:
+      - kong-net
+  match:
+    container_name: brinder-match-api
+    build: ./brinder-match-api
+    ports:
+      - 9090:8080
+    environment:
+      spring_profiles_active: security,docker
+    depends_on:
+      - mongo
+    networks:
+      - kong-net
+  swagger:
+    container_name: swagger-ui
+    image: swaggerapi/swagger-ui
+    environment:
+      SWAGGER_JSON: /doc/tindeer.yaml
+      DEEP_LINKING: "true"
+      OAUTH2_REDIRECT_URL: http://localhost:8888/oauth2-redirect.html
+      OAUTH_CLIENT_ID: swagger
+      OAUTH_USE_PKCE: "true"
+      OAUTH_REALM: tindeer
+      OAUTH_APP_NAME: swagger
+    ports:
+      - 8888:8080
+    volumes:
+      - ./swagger:/doc
+    networks:
+      - kong-net
+  kong:
+    container_name: kong
+    volumes:
+      - ./kong:/kong/declarative/
+    environment:
+      - KONG_DATABASE=off
+      - KONG_DECLARATIVE_CONFIG=/kong/declarative/kong.yaml
+      - KONG_PROXY_ACCESS_LOG=/dev/stdout
+      - KONG_ADMIN_ACCESS_LOG=/dev/stdout
+      - KONG_PROXY_ERROR_LOG=/dev/stderr
+      - KONG_ADMIN_ERROR_LOG=/dev/stderr
+      - KONG_LOG_LEVEL=info
+      - KONG_ADMIN_LISTEN=0.0.0.0:8001
+      - KONG_ADMIN_GUI_URL=http://localhost:8002
+      - KONG_LICENSE_DATA
+    ports:
+      - 8000:8000
+      - 8443:8443
+      - 8001:8001
+      - 8444:8444
+      - 8002:8002
+      - 8445:8445
+      - 8003:8003
+      - 8004:8004
+    image: kong
+    networks:
+      - kong-net
 
-      ports:
-        - 8080:8080
-    mongo:
-      image: mongo
-      ports:
-        - "27017:27017"
-
-    profile:
-      build: ./brinder-profile-api
-      ports:
-        - 9080:8080
-      environment:
-        spring_profiles_active: security,docker
-      depends_on:
-        - mongo
-    match:
-      build: ./brinder-match-api
-      ports:
-        - 9090:8080
-      environment:
-        spring_profiles_active: security,docker
-      depends_on:
-        - mongo
-    swagger:
-      image: swaggerapi/swagger-ui
-      environment:
-        SWAGGER_JSON: /doc/tindeer.yaml
-        DEEP_LINKING: "true"
-        OAUTH2_REDIRECT_URL: http://localhost:8888/oauth2-redirect.html
-        OAUTH_CLIENT_ID: swagger
-        OAUTH_USE_PKCE: "true"
-        OAUTH_REALM: tindeer
-        OAUTH_APP_NAME: swagger
-      ports:
-        - 8888:8080
-      volumes:
-        - ./swagger:/doc
+networks:
+  kong-net:
+    external: true
+    name: kong-net
